--- a/css/common/base.css
+++ b/css/common/base.css
@@ -51,3 +51,9 @@ img {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+/* 单行文本溢出隐藏 */
+.one-txt-cut {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
