MMBAPP-商品详情页面功能完成

--- a/less/category.less
+++ b/less/category.less
@@ -2,7 +2,7 @@
 @base: @desgin / 10;            // 基准值 75
 @mmbColor: #ff841d;           // 慢慢买网站主题色
 
-// 慢慢买分类菜单
+// 分类菜单区域
 .mmb_category {
     width: 100%;
     .category_lists {
@@ -12,7 +12,7 @@
         background-color: #ededed;
         border: 2rem/@base solid #cccccc;
         border-bottom: none;
-        // 慢慢买分类菜单 - 分类标题
+        // 分类菜单区域 - 分类标题
         .lists_title {
             height: 82rem/@base;
             line-height: 82rem/@base;
@@ -37,7 +37,7 @@
                 transition: transform .5s;
             }
         }
-        // 慢慢买分类菜单 - 分类列表
+        // 分类菜单区域 - 分类列表
         .lists_menus {
             background-color: #fff;
             li {
