--- a/css/common/base.css
+++ b/css/common/base.css
@@ -42,6 +42,12 @@ img {
 .fr {
     float: right;
 }
+/* 单行文本溢出隐藏 */
+.one-txt-cut {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
 /* 多行文本溢出 */
 .txt-cut {
     overflow: hidden;
@@ -51,9 +57,10 @@ img {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
-/* 单行文本溢出隐藏 */
-.one-txt-cut {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+/* 利用 flex 使文字垂直居中（一行或多行） */
+.align-center-vertical {
+    display: flex;
+    align-items: left;
+    justify-content: space-around;
+    flex-direction: column;
 }
