MMBAPP-省钱控页面功能完成

--- a/css/index.css
+++ b/css/index.css
@@ -85,6 +85,7 @@
 .mmb_recommend .recommend_list .recommend_list_ul li a .list_info .list_info_title {
   margin-top: 0.4rem;
   line-height: 0.46666667rem;
+  padding-right: 0.26666667rem;
 }
 .mmb_recommend .recommend_list .recommend_list_ul li a .list_info .list_info_title .list_info_title_name {
   color: #000000;
