--- a/less/index.less
+++ b/less/index.less
@@ -40,7 +40,6 @@
 // 折扣推荐区域
 .mmb_recommend {
     width: 100%;
-    // height: 500rem/@base;
     margin-top: 10rem/@base;
     background-color: #ffffff;
     // 折扣推荐区域 - 标题
@@ -102,6 +101,7 @@
                         .list_info_title {
                             margin-top: 30rem/@base;
                             line-height: 35rem/@base;
+                            padding-right: 20rem/@base;
                             .list_info_title_name {
                                 color: #000000;
                                 font-size: 30rem/@base;
