--- a/less/productList.less
+++ b/less/productList.less
@@ -82,6 +82,7 @@
                     .list_info_title {
                         margin-top: 30rem/@base;
                         line-height: 35rem/@base;
+                        padding-right: 20rem/@base;
                         .commodity_name {
                             color: #000000;
                             font-size: 30rem/@base;
